# linear-ticktick-sync

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/lt_sync/: __init__.py  __main__.py  app.py  config.py  logging_setup.py  notify.py  scheduler.py  webhook.py
src/lt_sync/linear/: client.py  types.py  webhook_verify.py
src/lt_sync/state/: db.py  models.py  repo.py
src/lt_sync/sync/: conflict.py  engine.py  linear_to_tt.py  mappers.py  poller.py  reconcile.py  setup.py
src/lt_sync/ticktick/: client.py  oauth.py  token_provider.py  types.py
tests/unit/: test_conflict.py  test_mappers.py  test_multi_team.py
